fixed the scrollbar

--- a/About Us Page/about.css
+++ b/About Us Page/about.css
@@ -24,7 +24,7 @@ body {
 
 .about {
     z-index: 1; 
-    background-color: white;
+    background-color: var(--second-color);
     width: 80%;
     box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
@@ -35,7 +35,7 @@ body {
 /* Navbar */
 header{
     display: flex;
-    background-color:  white ;
+    background-color:  var(--second-color) ;
     width: 100%;
     padding: 10px;
     font-family: "Oswald", serif;
@@ -377,4 +377,9 @@ header{
         width: 80%;
         height:180px;
     }
+}
+
+/* ScrollBar */
+::-webkit-scrollbar {
+    display: none; 
 }
