--- a/Blog Page/blog.css
+++ b/Blog Page/blog.css
@@ -641,3 +641,8 @@ a {
     gap: 80px
 }
 }
+
+/* ScrollBar */
+::-webkit-scrollbar {
+  display: none; 
+}
