--- a/Product Page/product.css
+++ b/Product Page/product.css
@@ -719,3 +719,8 @@ footer {
 h4 {
   color: var(--sixth-color);
 }
+
+/* ScrollBar */
+::-webkit-scrollbar {
+  display: none; 
+}
